--- a/Bangerify/Info.plist
+++ b/Bangerify/Info.plist
@@ -21,5 +21,10 @@
 	<array>
 		<string>LondrinaSolid-Regular.ttf</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
